@@ -1,0 +1,195 @@
+<?xml version="1.0"?>
+
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<!-- A JEdit mode configuration file for FTL (FreeMarker Template Language) 
+     Note that this version will only work with JEdit 4.1pre6 or later. -->
+
+<MODE>
+  <RULES IGNORE_CASE="FALSE">
+
+    <!-- JavaScript -->
+    <SPAN TYPE="MARKUP" DELEGATE="html::JAVASCRIPT">
+    <BEGIN>&lt;script</BEGIN>
+    <END>&lt;/script&gt;</END>
+    </SPAN>
+    <SPAN TYPE="MARKUP" DELEGATE="html::JAVASCRIPT">
+    <BEGIN>&lt;Script</BEGIN>
+    <END>&lt;/Script&gt;</END>
+    </SPAN>
+    <SPAN TYPE="MARKUP" DELEGATE="html::JAVASCRIPT">
+    <BEGIN>&lt;SCRIPT</BEGIN>
+    <END>&lt;/SCRIPT&gt;</END>
+    </SPAN>
+
+    <!-- stylesheet -->
+    <SPAN TYPE="MARKUP" DELEGATE="html::CSS">
+    <BEGIN>&lt;style</BEGIN>
+    <END>&lt;/style&gt;</END>
+    </SPAN>
+    <SPAN TYPE="MARKUP" DELEGATE="html::CSS">
+    <BEGIN>&lt;Style</BEGIN>
+    <END>&lt;/Style&gt;</END>
+    </SPAN>
+    <SPAN TYPE="MARKUP" DELEGATE="html::CSS">
+    <BEGIN>&lt;STYLE</BEGIN>
+    <END>&lt;/STYLE&gt;</END>
+    </SPAN>
+
+    <!-- XML/HTML comment -->
+    <SPAN TYPE="COMMENT2" DELEGATE="xml::DTD-TAGS">
+    <BEGIN>&lt;!--</BEGIN>
+    <END>--&gt;</END>
+    </SPAN>
+
+    <!-- DTD instructions -->
+    <SPAN TYPE="KEYWORD2" DELEGATE="xml::DTD-TAGS">
+    <BEGIN>&lt;!</BEGIN>
+    <END>&gt;</END>
+    </SPAN>
+
+    <!-- FTL markup starts here. -->
+
+    <SPAN TYPE="KEYWORD1" DELEGATE="EXPRESSION">
+      <BEGIN>${</BEGIN>
+      <END>}</END>
+    </SPAN>
+
+    <SPAN TYPE="KEYWORD1" DELEGATE="EXPRESSION">
+      <BEGIN>#{</BEGIN>
+      <END>}</END>
+    </SPAN>
+
+    <SPAN_REGEXP TYPE="KEYWORD1" HASH_CHAR="&lt;" DELEGATE="EXPRESSION">
+      <BEGIN>&lt;#ftl\&gt;</BEGIN>
+      <END>&gt;</END>
+    </SPAN_REGEXP>
+    
+    <!-- Is it really necessary to have 2 SPAN_REGEXP elements here? Kludgy... -->
+    <SPAN_REGEXP TYPE="KEYWORD1" DELEGATE="EXPRESSION" HASH_CHAR="&lt;">
+      <BEGIN>&lt;#?(if|elseif|switch|foreach|list|case|assign|local|global|include|stop|escape|macro|function|transform|call)\s</BEGIN>
+      <END>&gt;</END>
+    </SPAN_REGEXP>
+    <SPAN_REGEXP TYPE="KEYWORD1" DELEGATE="EXPRESSION" HASH_CHAR="&lt;">
+      <BEGIN>&lt;#?(if|elseif|switch|foreach|list|case|assign|local|global|include|stop|escape|macro|function|transform|call)$</BEGIN>
+      <END>&gt;</END>
+    </SPAN_REGEXP>
+
+
+    <SPAN_REGEXP TYPE="KEYWORD1" DELEGATE="INVALID" HASH_CHAR="&lt;">
+      <BEGIN>&lt;/#?(if|switch|foreach|list|escape|macro|function|transform|compress|noescape)\&gt;</BEGIN>
+      <END>&gt;</END>
+    </SPAN_REGEXP>
+    <SPAN_REGEXP TYPE="KEYWORD1" DELEGATE="INVALID" HASH_CHAR="&lt;">
+      <BEGIN>&lt;#?(else|compress|noescape|default|break|flush|return)\&gt;</BEGIN>
+      <END>&gt;</END>
+    </SPAN_REGEXP>
+    
+    <SPAN TYPE="COMMENT1">
+      <BEGIN>&lt;#--</BEGIN>
+      <END>--&gt;</END>
+    </SPAN>
+
+    <SEQ TYPE="KEYWORD1">&lt;stop&gt;</SEQ>
+     <SPAN TYPE="COMMENT1">
+    <BEGIN>&lt;comment&gt;</BEGIN>
+    <END>&lt;/comment&gt;</END>
+    </SPAN>
+    <SPAN TYPE="INVALID">
+      <BEGIN>&lt;#</BEGIN>
+      <END>&gt;</END>
+    </SPAN>
+    <SPAN TYPE="INVALID">
+      <BEGIN>&lt;/#</BEGIN>
+      <END>&gt;</END>
+    </SPAN>
+
+    <!-- non-FTL markup -->
+    <SPAN TYPE="MARKUP" DELEGATE="TAGS">
+    <BEGIN>&lt;</BEGIN>
+    <END>&gt;</END>
+    </SPAN>
+
+
+  </RULES>
+  <RULES SET="EXPRESSION"
+      DEFAULT="KEYWORD2"
+      HIGHLIGHT_DIGITS="TRUE"
+      ESCAPE="\"
+    >
+    <SPAN TYPE="LITERAL1">
+    <BEGIN>"</BEGIN>
+    <END>"</END>
+    </SPAN>
+    <SPAN TYPE="OPERATOR" DELEGATE="EXPRESSION">
+      <BEGIN>(</BEGIN><END>)</END>
+    </SPAN>
+    <!-- Builtins -->
+    <MARK_FOLLOWING TYPE="FUNCTION">?</MARK_FOLLOWING>
+    <KEYWORDS IGNORE_CASE="FALSE">
+      <KEYWORD1>true</KEYWORD1>
+      <KEYWORD1>false</KEYWORD1>
+      <KEYWORD1>as</KEYWORD1>
+      <KEYWORD1>in</KEYWORD1>
+      <OPERATOR>!</OPERATOR>
+      <OPERATOR>=</OPERATOR>
+      <OPERATOR>!=</OPERATOR>
+      <OPERATOR>==</OPERATOR>
+      <OPERATOR>|</OPERATOR>
+      <OPERATOR>||</OPERATOR>
+      <OPERATOR>&amp;</OPERATOR>
+      <OPERATOR>&amp;&amp;</OPERATOR>
+      <OPERATOR>&lt;</OPERATOR>
+      <OPERATOR>&gt;</OPERATOR>
+      <OPERATOR>&lt;=</OPERATOR>
+      <OPERATOR>&gt;=</OPERATOR>
+      <OPERATOR>gt</OPERATOR>
+      <OPERATOR>gte</OPERATOR>
+      <OPERATOR>lt</OPERATOR>
+      <OPERATOR>lte</OPERATOR>
+      <OPERATOR>*</OPERATOR>
+      <OPERATOR>/</OPERATOR>
+      <OPERATOR>-</OPERATOR>
+      <OPERATOR>+</OPERATOR>
+      <OPERATOR>.</OPERATOR>
+      <OPERATOR>:</OPERATOR>
+      <OPERATOR>%</OPERATOR>
+      <OPERATOR>[</OPERATOR>
+      <OPERATOR>]</OPERATOR>
+      <OPERATOR>{</OPERATOR>
+      <OPERATOR>}</OPERATOR>
+      <OPERATOR>;</OPERATOR>
+    </KEYWORDS>
+  </RULES>
+
+  <RULES SET="TAGS" DEFAULT="MARKUP" ESCAPE="\">
+    <SPAN TYPE="LITERAL1" DELEGATE="INQUOTE">
+    <BEGIN>"</BEGIN>
+    <END>"</END>
+    </SPAN>
+
+    <SPAN TYPE="LITERAL1" DELEGATE="INQUOTE">
+    <BEGIN>'</BEGIN>
+    <END>'</END>
+    </SPAN>
+
+    <SEQ TYPE="OPERATOR">=</SEQ>
+  </RULES>
+
+  
+  <!-- a ruleset for when we are within a quoted string within an SGML tag
+       It can contain FTL interpolations -->
+  <RULES SET="INQUOTE">
+    <SPAN TYPE="KEYWORD1" DELEGATE="EXPRESSION">
+    <BEGIN>${</BEGIN>
+    <END>}</END>
+    </SPAN>
+    <SPAN TYPE="KEYWORD1" DELEGATE="EXPRESSION">
+    <BEGIN>#{</BEGIN>
+    <END>}</END>
+    </SPAN>
+  </RULES>
+
+  <!-- empty ruleset to delegate to for spots where any non-whitespace is invalid -->
+  <RULES SET="INVALID" DEFAULT="INVALID" />
+</MODE>
